# aoc_2019

./: LICENSE  README.md
day_1/: CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
day_1/.github/: ISSUE_TEMPLATE.md
day_1/day_1/: __init__.py  cli.py  day_1.py
day_1/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
day_1/tests/: __init__.py  test_day_1.py
day_10/: Cargo.toml
day_10/src/: lib.rs
day_11/: Cargo.toml
day_11/src/: lib.rs
day_12/: Cargo.toml
day_12/src/: lib.rs
day_13/: Cargo.toml
day_13/src/: lib.rs
day_14/: Cargo.toml
day_14/src/: lib.rs
day_15/: .gitignore  Cargo.toml
day_15/src/: lib.rs
day_16/: Cargo.toml
day_16/src/: lib.rs
day_17/: Cargo.toml
day_17/src/: alignment.rs  lib.rs
day_18/: Cargo.toml
day_18/src/: graph.rs  input  lib.rs  map.rs
day_19/: Cargo.toml
day_19/src/: lib.rs
day_2/: Cargo.toml
day_2/src/: computer.rs  main.rs
day_3/: Gemfile  README.md  day_3.gemspec
day_3/lib/: day_3.rb
day_3/spec/: day_3_spec.rb  spec_helper.rb
day_4/: .gitignore  build.sbt
day_5/: .gitignore  Cargo.toml
day_5/src/: computer.rs  main.rs
day_6/: CONTRIBUTING.rst  Pipfile  README.rst  setup.cfg  setup.py  tasks.py
day_6/.github/: ISSUE_TEMPLATE.md
day_6/day_6/: __init__.py  cli.py  day_6.py
day_6/docs/: conf.py  index.rst  installation.rst  usage.rst
day_6/tests/: test_day_6.py
day_7/: Cargo.toml
day_7/src/: amplification.rs  main.rs
day_8/: Cargo.toml
day_8/src/: lib.rs
day_9/: Cargo.toml
day_9/src/: computer.rs
(+2 files in other folders)
