[package]
name = "day_10"
version = "0.2.0"
authors = ["Denaun <mauzuc90@yahoo.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "^0.2.1"
num-integer = "^0.1.42"
num-rational = "^0.2.3"
itertools = "^0.8.2"
